QObject: fix connection to function pointer with non-copyable references argument

For example, QObject is non copyable (its copy constructor is deleted or
private via Q_DISABLE_COPY). It should still be allowed to pass a reference
to a QObject as an argument to as signal (or slot).
This fixes a compilation failure.

Task-number: QTBUG-36119
Change-Id: I9bcf477e347d69fdae2543c99781b6421883be78
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: e59b28e08e7212415726fe9cd1b394e92607f061 https://github.com/qt/qtbase/commit/e59b28e08e7212415726fe9cd1b394e92607f061